Slightly modify descriptions, but leave directories intact for easier merge.

--- a/themes/antergos/index.html
+++ b/themes/antergos/index.html
@@ -33,8 +33,8 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>LightDM Webkit2 Greeter</title>
-	<meta name="description" content="Theme: antergos">
-	<meta name="author" content="Dustin Falgout">
+	<meta name="description" content="Theme: home-taping">
+	<meta name="author" content="Märt Põder">
 
 	<!--For testing the theme in a web browser -->
 	<!--<script type="text/javascript" src="../_vendor/js/mock.js"></script>-->
@@ -70,7 +70,7 @@
 						<div id="login" class="panel panel-default login-box">
 							<div class="panel-heading text-center">
 									<span class="pull-left">
-										<img src="img/antergos.png" data-greeter-config="logo" alt="Antergos"/>
+										<img src="img/panel-header-icon.svg" data-greeter-config="logo" alt="Home taping is killing music!"/>
 									</span> <span class="welcome"></span>
 								<span id="hostname" class="pull-right"></span>
 							</div>
